<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_subtitle"
        android:gravity="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:hint="@string/name_input"
        android:inputType="text"
        android:background="@drawable/register_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle"
        />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10sp"
        android:hint="@string/last_name_input"
        android:inputType="text"
        android:background="@drawable/register_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        />

    <TextView
        android:id="@+id/type_document_textView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/type_document_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input"
        />

    <Button
        android:id="@+id/type_document_button"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/form_button"
        android:text="@string/type_document_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/type_document_textView"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />

    <EditText
        android:id="@+id/document_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/document_input"
        android:inputType="number"
        android:background="@drawable/register_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_document_button"
        />

    <TextView
        android:id="@+id/birth_date_textView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/birth_date_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/document_input"
        />

    <Button
        android:id="@+id/birth_date_button"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/form_button"
        android:text="@string/birth_date_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/birth_date_textView"
        app:layout_constraintTop_toBottomOf="@+id/document_input" />

    <TextView
        android:id="@+id/hobbies_textView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="0sp"
        android:text="@string/hobbies_textView"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date_button" />

    <Button
        android:id="@+id/hobbies_button"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/form_button"
        android:text="@string/hobbies_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/hobbies_textView"
        app:layout_constraintTop_toBottomOf="@+id/birth_date_button" />

    <TextView
        android:id="@+id/hobbies_text_choice"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black_light"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_button"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:background="@drawable/register_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_text_choice"
        />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password_input"
        android:inputType="textPassword"
        android:background="@drawable/register_inputs"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/reset_button"
        android:text="@string/reset_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/register_button"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
        />


</androidx.constraintlayout.widget.ConstraintLayout>