<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserFragment"
    android:background="@drawable/home_fragments">

    <TextView
        android:id="@+id/user_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frg_user_title"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_title"
        />

    <TextView
        android:id="@+id/user_name_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_title"
        />

    <TextView
        android:id="@+id/user_last_name_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_last_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_label"
        />

    <TextView
        android:id="@+id/user_last_name_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_label"
        />

    <TextView
        android:id="@+id/user_type_document_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_type_document"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_last_name_label"
        />

    <TextView
        android:id="@+id/user_type_document_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_last_name_label"
        />

    <TextView
        android:id="@+id/user_document_label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_document"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_type_document_label"
        />

    <TextView
        android:id="@+id/user_document_value"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_type_document_label"
        />

    <TextView
        android:id="@+id/user_birthdate_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_birthdate"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_document_label"
        />

    <TextView
        android:id="@+id/user_birthdate_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_document_label"
        />

    <TextView
        android:id="@+id/user_hobbies_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_hobbies"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_birthdate_label"
        />

    <TextView
        android:id="@+id/user_hobies_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_birthdate_label"
        />

    <TextView
        android:id="@+id/user_password_label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_user_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_hobbies_label"
        />

    <TextView
        android:id="@+id/user_password_value"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_hobbies_label"
        tools:ignore="TextViewEdits" />


</androidx.constraintlayout.widget.ConstraintLayout>