<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserFragment"
    android:background="@drawable/home_fragments">

    <TextView
        android:id="@+id/hobbies_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frg_hobbies_title"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/hobbies_hobbies_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/frg_hobbies_subtitle"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_title"
        />

    <TextView
        android:id="@+id/hobbies_hobies_value"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_title"
        />

    <Button
        android:id="@+id/hobbies_hobbies_button"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/form_button"
        android:text="@string/frg_hobbies_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbies_hobbies_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>